laborations/lab4/testsuite/good/shadow2.hs
one = 2 ;
two one = one ;

main = print (two 1) ;
