laborations/lab4/testsuite/bad/add-functions-2.hs
K1 ignore = 1;

main = print (K1 + 1);
